--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS de boostrap -->
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -19,6 +18,48 @@
 
 <body>
 
+<!-- navbar -->
+<section>
+<nav class="navbar bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="assets/img/LOGO ARG PROG.png" alt="Argentina Programa" class="d-inline-block align-text-top"> 
+
+        <!-- Navbar text with an inline element -->
+        <span class="navbar-text">
+            Argentina Programa #YoProgramo
+        </span>
+      </a>
+    </div>
+
+    <!-- social links inside navbar -->
+    <div class="container-fluid"> 
+        <i class="fa-brands fa-linkedin"></i> <i class="fa-brands fa-instagram"></i> <i class="fa-brands fa-github"></i>
+    </div>
+
+
+
+    <!-- navbar login button -->
+    <form class="container-fluid justify-content-start">
+        <button class="btn btn-outline-success me-2" type="button">Login</button>
+        <!-- <button class="btn btn-sm btn-outline-secondary" type="button">Smaller button</button> -->
+    </form>
+
+
+</nav>
+</section>
+
+
+
+<section>
+    <!-- boostrap logo -->
+    <i class="fa-brands fa-bootstrap" ></i>
+</section>
+
+
+
+
+<section></section>
 
 <section></section>
 <section></section>
@@ -27,17 +68,6 @@
 <section></section>
 <section></section>
 <section></section>
-<section></section>
-
-<!-- hola -->
-
-<h6>Argentina programa
-    #YoProgramo
-</h6>
-
-<!-- logo de yo programo -->
-<a href=""></a> 
-
 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
