--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
+    /> 
 
     <!-- fontawesome -->
     <script
@@ -60,6 +60,7 @@
         </div>
       </div>
     </nav>
+    <p>Hola Hola</p>
 
     <div class="container">
       <div class="flex-column flex-column"></div>
@@ -79,7 +80,12 @@
       <div class="flex-column flex-column"></div>
     </div>
 
-    <!---------------------------------------->
+<!------------------MODALS---------------------->
+
+<!-- MODAL LOGIN -->
+
+
+<!---------------------------------------->
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
