--- a/test.html
+++ b/test.html
@@ -27,192 +27,340 @@
       crossorigin="anonymous"
     />
     <!-- assets -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/test.css" />
   </head>
 
   <body>
-    <header>
-      <div class="logo">
-        <img src="assets/img/logo.png" alt="#" />
+    <!-- NAVBAR -->
+    <!-- Side navigation -->
+    <div class="sidenav">
+      <div class="section">
+        <div class="container">
+          <div class="row full-height justify-content-center pb-5 pt-5">
+            <a
+              class="p-0"
+              style="color: #009188; text-decoration: none; text-align: center"
+              href="https://www.linkedin.com/in/hebe-lia-romeu-0a5343234/"
+              alt="linkedin"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </div>
+        </div>
       </div>
-      <button class="nav-togle" aria-label="toggle navigation">
-        <span class="hamburgr"></span>
-      </button>
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="#home" class="nav__link">&lt INICIO &gt</a>
-          </li>
-          <li class="nav__item">
-            <a href="#about" class="nav__link">&lt ACERCA DE MI &gt</a>
-          </li>
-          <li class="nav__item">
-            <a href="#experience" class="nav__link">&lt EXPERIENCIA &gt</a>
-          </li>
-          <li class="nav__item">
-            <a href="#education" class="nav__link"
-              >&lt FORMACIÓN ACADEMICA &gt</a
-            >
-          </li>
-          <li class="nav__item">
-            <a href="#skills" class="nav__link">&lt HABILIDADES &gt</a>
-          </li>
-          <li class="nav__item">
-            <a href="#projects" class="nav__link">&lt PROYECTOS &gt</a>
-          </li>
-        </ul>
+      <div class="section">
+        <div class="container">
+          <div class="row full-height justify-content-center pb-5 pt-5">
+            <a
+              class="p-0"
+              style="color: #009188; text-decoration: none; text-align: center"
+              href="https://github.com/hebelia"
+              target="_blank"
+              ><i class="fa-brands fa-github-alt"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+      <div class="section">
+        <div class="container">
+          <div class="row full-height justify-content-center pb-5 pt-5">
+            <a
+              class="p-0"
+              style="color: #009188; text-decoration: none; text-align: center"
+              href="https://codepen.io/hebelia"
+              target="_blank"
+            ><i class="fa-brands fa-codepen"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <a href="#">Contact</a>
+    </div>
+
+    <!-- Page content -->
+    <div class="main">
+      ...
+
+      <nav class="navbar navbar-expand-lg bg-transparent">
+        <div class="container-fluid">
+          <a
+            ><img class="logo" src="assets/img/logo.png" alt="logoArgProg"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <!-- i had to leave this here cause otherwise the login and logout button go to the left -->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item"></li>
+            </ul>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+              <!-- Button trigger modal -->
+              <button
+                type="button"
+                class="btn btn-primary"
+                data-bs-toggle="modal"
+                data-bs-target="#modal-1"
+              >
+                Iniciar Sesión
+              </button>
+              <button class="btn btn-primary" type="button">
+                Cerrar Sesión
+              </button>
+            </div>
+          </div>
+        </div>
       </nav>
-    </header>
-    <!-- curriculum -->
+      <!-- -------------------------------->
 
-    <!-- introduction -->
-    <section class="introduction" id="home">
-      <h1 class="section__title section__title--intro">
-        Hola, me llamo <strong>Hebe Lia</strong>
-      </h1>
-      <p class="section__subtitle section__subtitle--intro">
-        full stack developer junior
-      </p>
-      <img src="assets/img/pfp.jpg" alt="yo" />
-      <div clas="introduction__icon">
-        <i class="fa-solid fa-laptop-code"></i>
+      <header>
+        <div class="logo">
+          <img src="assets/img/logo.png" alt="#" />
+        </div>
+        <button class="nav-togle" aria-label="toggle navigation">
+          <span class="hamburgr"></span>
+        </button>
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#home" class="nav__link">&lt INICIO &gt</a>
+            </li>
+            <li class="nav__item">
+              <a href="#about" class="nav__link">&lt ACERCA DE MI &gt</a>
+            </li>
+            <li class="nav__item">
+              <a href="#experience" class="nav__link">&lt EXPERIENCIA &gt</a>
+            </li>
+            <li class="nav__item">
+              <a href="#education" class="nav__link"
+                >&lt FORMACIÓN ACADEMICA &gt</a
+              >
+            </li>
+            <li class="nav__item">
+              <a href="#skills" class="nav__link">&lt HABILIDADES &gt</a>
+            </li>
+            <li class="nav__item">
+              <a href="#projects" class="nav__link">&lt PROYECTOS &gt</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <!-- curriculum -->
+
+      <!-- introduction -->
+      <section class="introduction" id="home">
+        <h1 class="section__title section__title--intro">
+          Hola, me llamo <strong>Hebe Lia</strong>
+        </h1>
+        <p class="section__subtitle section__subtitle--intro">
+          full stack developer junior
+        </p>
+        <img src="assets/img/pfp.jpg" alt="yo" />
+        <!-- ICON -->
+        <div clas="introduction__icon">
+          <i class="fa-solid fa-laptop-code"></i>
+        </div>
+      </section>
+
+      <!-- ABOUT -->
+      <section class="about-me" id="about">
+        <h2 class="section__title section__title--about">
+          &lt SOBRE MI &gt
+          <i class="fa-solid fa-circle-info"></i>
+        </h2>
+        <p class="section__subtitle section__subtitle--about">
+          descripcion de mi
+        </p>
+        <div class="about-me__body">
+          <!-- componente de about-me -->
+          <p>mas sobre mi?</p>
+        </div>
+      </section>
+
+      <!-- EXPERIENCE -->
+      <section class="my-experience" id="experience">
+        <h2 class="section_title section__title--experience">
+          &lt MI EXPERIENCIA &gt <i class="fa-solid fa-briefcase"></i>
+        </h2>
+        <div class="experience">
+          <div class="job">
+            <i class="fa-regular fa-clipboard"></i>
+            <h3>
+              Trabajo 1 (titulo del trabajo)
+
+              <p>descripcion trabajo 1</p>
+              <p class="project__date">fecha trabajo 1</p>
+            </h3>
+          </div>
+          <!-- trabajo 1-->
+
+          <div class="job">
+            <i class="fa-regular fa-clipboard"></i>
+            <h3>
+              Trabajo 2
+
+              <p>descripcion trabajo 2</p>
+              <p class="project__date">fecha trabajo 2</p>
+            </h3>
+          </div>
+          <!-- trabajo 2-->
+
+          <div class="job">
+            <i class="fa-regular fa-clipboard"></i>
+            <h3>
+              Trabajo 3
+
+              <p>descripcion trabajo 3</p>
+              <p class="project__date">fecha trabajo 3</p>
+            </h3>
+          </div>
+
+          <!-- trabajo 3-->
+        </div>
+      </section>
+
+      <!-- EDUCATION -->
+
+      <section class="my-education" id="education">
+        <h2 class="section_title section__title--education">
+          &lt MI FORMACIÓN ACADEMICA &gt
+          <i class="fa-solid fa-user-graduate"></i>
+        </h2>
+        <div class="education">
+          <div class="course">
+            <i class="fa-regular fa-clipboard"></i>
+            <h3>
+              NOMBRE de la carrira, titulo o certificacion
+
+              <p>nombre de la institucion</p>
+              <p class="project__date">fecha o duracion de la educacion</p>
+              <!-- modal con seleccion de la fecha de inicio y finalizacion? -->
+            </h3>
+          </div>
+          <!-- titulo 1 -->
+
+          <div class="course">
+            <i class="fa-regular fa-clipboard"></i>
+            <h3>
+              NOMBRE de la carrira, titulo o certificacion
+
+              <p>nombre de la institucion</p>
+              <p class="project__date">fecha o duracion de la educacion</p>
+              <!-- modal con seleccion de la fecha de inicio y finalizacion? -->
+            </h3>
+          </div>
+          <!-- titulo 1 -->
+          <div class="course">
+            <i class="fa-regular fa-clipboard"></i>
+            <h3>
+              NOMBRE de la carrira, titulo o certificacion
+
+              <p>nombre de la institucion</p>
+              <p class="project__date">fecha o duracion de la educacion</p>
+              <!-- modal con seleccion de la fecha de inicio y finalizacion? -->
+            </h3>
+          </div>
+          <!-- titulo 1 -->
+        </div>
+      </section>
+
+      <!-- SKILLS CIRCLES --COMPLETE!!!!!!! -->
+      <section class="my-skills" id="skills">
+        <h2 class="section__title section__title--skills">
+          &lt MIS HABILIDADES &gt <i class="fa-solid fa-shapes"></i>
+        </h2>
+
+        <div class="skills"></div>
+      </section>
+
+      <!-- PROJECTS -->
+      <section class="my-projects" id="projects">
+        <h2 class="section_title section__title--projects">
+          &lt MIS PROYECTOS &gt <i class="fa-solid fa-list-check"></i>
+        </h2>
+        <div class="projects">
+          <div class="project">
+            <i class="fa-regular fa-folder"></i>
+            <h3>
+              Proyecto1
+
+              <p>descripcion proyecto 1</p>
+              <p class="project__date">fecha proyecto 1</p>
+            </h3>
+          </div>
+          <!-- proyecto 1-->
+          <div class="project">
+            <i class="fa-regular fa-folder"></i>
+            <h3>
+              Proyecto2
+              <p>descripcion proyecto 2</p>
+              <p class="project__date">fecha proyecto 2</p>
+            </h3>
+          </div>
+          <!-- proyecto 2-->
+          <div class="project">
+            <i class="fa-regular fa-folder"></i>
+            <h3>
+              Proyecto3
+              <p>descripcion proyecto 3</p>
+              <p class="project__date">fecha proyecto 3</p>
+            </h3>
+          </div>
+          <!-- proyecto 3-->
+        </div>
+      </section>
+
+      <!-- MODALS -->
+
+      <div
+        class="modal fade"
+        id="modal-1"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">
+                Modal title
+              </h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">...</div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">
+                Save changes
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
-    </section>
 
-    <!-- ABOUT -->
-    <section class="about-me" id="about">
-      <h2 class="section__title section__title--about">&lt SOBRE MI &gt</h2>
-      <p class="section__subtitle section__subtitle--about">
-        descripcion de mi
-      </p>
-      <div class="about-me__body">
-        <!-- componente de about-me -->
-        <p>mas sobre mi?</p>
-      </div>
-    </section>
-
-    <!-- EXPERIENCE -->
-    <section class="my-experience" id="experience">
-      <h2 class="section_title section__title--experience">
-        &lt MI EXPERIENCIA &gt
-      </h2>
-      <div class="experience">
-        <div class="job">
-          <i class="fa-regular fa-clipboard"></i>
-          <h3>
-            Trabajo 1 (titulo del trabajo)
-
-            <p>descripcion trabajo 1</p>
-            <p class="project__date">fecha trabajo 1</p>
-          </h3>
-        </div>
-        <!-- trabajo 1-->
-
-        <div class="job">
-          <i class="fa-regular fa-clipboard"></i>
-          <h3>
-            Trabajo 2
-
-            <p>descripcion trabajo 2</p>
-            <p class="project__date">fecha trabajo 2</p>
-          </h3>
-        </div>
-        <!-- trabajo 2-->
-
-        <div class="job">
-          <i class="fa-regular fa-clipboard"></i>
-          <h3>
-            Trabajo 3
-
-            <p>descripcion trabajo 3</p>
-            <p class="project__date">fecha trabajo 3</p>
-          </h3>
-        </div>
-
-        <!-- trabajo 3-->
-      </div>
-    </section>
-
-    <!-- EDUCATION -->
-
-    <section class="my-education" id="education">
-      <h2 class="section_title section__title--education">
-        &lt MI FORMACIÓN ACADEMICA &gt
-      </h2>
-      <div class="education">
-        <div class="course">
-          <i class="fa-regular fa-clipboard"></i>
-          <h3>
-            NOMBRE de la carrira, titulo o certificacion
-
-            <p>nombre de la institucion</p>
-            <p class="project__date">fecha o duracion de la educacion</p>
-            <!-- modal con seleccion de la fecha de inicio y finalizacion? -->
-          </h3>
-        </div>
-        <!-- titulo 1 -->
-
-        <div class="job">
-          <i class="fa-regular fa-clipboard"></i>
-          <h3>
-            Trabajo 2
-
-            <p>descripcion trabajo 2</p>
-            <p class="project__date">fecha trabajo 2</p>
-          </h3>
-        </div>
-        <!-- trabajo 2-->
-
-        <div class="job">
-          <i class="fa-regular fa-clipboard"></i>
-          <h3>
-            Trabajo 3
-
-            <p>descripcion trabajo 3</p>
-            <p class="project__date">fecha trabajo 3</p>
-          </h3>
-        </div>
-
-        <!-- trabajo 3-->
-      </div>
-    </section>
-
-    <!-- PROJECTS -->
-    <section class="projects" id="projects">
-      <h2 class="section_title section__title--projects">
-        &lt MIS PROYECTOS &gt
-      </h2>
-      <div class="projects">
-        <div class="project">
-          <i class="fa-regular fa-folder"></i>
-          <h3>
-            Proyecto1
-
-            <p>descripcion proyecto 1</p>
-            <p class="project__date">fecha proyecto 1</p>
-          </h3>
-        </div>
-        <!-- proyecto 1-->
-        <div class="project">
-          <i class="fa-regular fa-folder"></i>
-          <h3>
-            Proyecto2
-            <p>descripcion proyecto 2</p>
-            <p class="project__date">fecha proyecto 2</p>
-          </h3>
-        </div>
-        <!-- proyecto 2-->
-        <div class="project">
-          <i class="fa-regular fa-folder"></i>
-          <h3>
-            Proyecto3
-            <p>descripcion proyecto 3</p>
-            <p class="project__date">fecha proyecto 3</p>
-          </h3>
-        </div>
-        <!-- proyecto 3-->
-      </div>
-    </section>
+      <!-- cierra el segundo div -->
+    </div>
+    <!-- modal 2 -->
 
     <!-- JavaScript Bundle with Popper -->
     <script
