--- a/test.html
+++ b/test.html
@@ -33,55 +33,77 @@
   <body>
     <!-- NAVBAR -->
     <!-- Side navigation -->
-    <div class="sidenav">
-      <div class="section">
-        <div class="container">
-          <div class="row full-height justify-content-center pb-5 pt-5">
-            <a
-              class="p-0"
-              style="color: #009188; text-decoration: none; text-align: center"
-              href="https://www.linkedin.com/in/hebe-lia-romeu-0a5343234/"
-              alt="linkedin"
-              target="_blank"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
-          </div>
-        </div>
-      </div>
-      <div class="section">
-        <div class="container">
-          <div class="row full-height justify-content-center pb-5 pt-5">
-            <a
-              class="p-0"
-              style="color: #009188; text-decoration: none; text-align: center"
-              href="https://github.com/hebelia"
-              target="_blank"
-              ><i class="fa-brands fa-github-alt"></i
-            ></a>
-          </div>
-        </div>
-      </div>
-      <div class="section">
-        <div class="container">
-          <div class="row full-height justify-content-center pb-5 pt-5">
-            <a
-              class="p-0"
-              style="color: #009188; text-decoration: none; text-align: center"
-              href="https://codepen.io/hebelia"
-              target="_blank"
-            ><i class="fa-brands fa-codepen"></i>
-            </a>
-          </div>
-        </div>
-      </div>
 
-      <a href="#">Contact</a>
+    <div class="sidenav">
+      <div
+        class="row full-height justify-content-center pb-5 pt-5 mt-5 mb-5"
+      ></div>
+
+      <div class="row full-height justify-content-center pb-5 pt-5 mt-5 mb-5">
+        <div class="section">
+          <div class="container">
+            <div class="row full-height justify-content-center pb-5 pt-5">
+              <a
+                class="p-0"
+                style="
+                  color: #009188;
+                  text-decoration: none;
+                  text-align: center;
+                "
+                href="https://www.linkedin.com/in/hebe-lia-romeu-0a5343234/"
+                alt="linkedin"
+                target="_blank"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="section">
+          <div class="container">
+            <div class="row full-height justify-content-center pb-5 pt-5">
+              <a
+                class="p-0"
+                style="
+                  color: #009188;
+                  text-decoration: none;
+                  text-align: center;
+                "
+                href="https://github.com/hebelia"
+                target="_blank"
+                ><i class="fa-brands fa-github-alt"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="section">
+          <div class="container">
+            <div class="row full-height justify-content-center pb-5 pt-5">
+              <a
+                class="p-0"
+                style="
+                  color: #009188;
+                  text-decoration: none;
+                  text-align: center;
+                "
+                href="https://codepen.io/hebelia"
+                target="_blank"
+                ><i class="fa-brands fa-codepen"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="section">
+          <div class="container">
+            <div class="row full-height justify-content-center pb-5 pt-5">
+              <a href="#">Contact</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Page content -->
     <div class="main">
-      ...
-
       <nav class="navbar navbar-expand-lg bg-transparent">
         <div class="container-fluid">
           <a
