mod original index

--- a/test.html
+++ b/test.html
@@ -44,6 +44,44 @@
   <body>
     <!-- NAVBAR -->
     <!-- Side navigation -->
+    
+    <section class="container">
+      <div class="flex-container">
+        <div>
+          <a
+            href="https://www.linkedin.com/in/hebe-lia-romeu-0a5343234/"
+            alt="linkedin"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+        <div>
+          <a
+            href="https://github.com/hebelia"
+            alt="github"
+            target="_blank"
+            ><i class="fa-brands fa-github-alt"></i
+          ></a>
+        </div>
+        <div>
+          <a
+            href="https://codepen.io/hebelia"
+            alt="codepen"
+            target="_blank"
+            ><i class="fa-brands fa-codepen"></i>
+          </a>
+        </div>
+      </div>
+  </section>
+
+
+
+
+
+
+
+
+
 
     <div class="sidenav">
       <div
@@ -103,18 +141,38 @@
             </div>
           </div>
         </div>
-        <div class="section">
-          <div class="container">
-            <div class="row full-height justify-content-center pb-5 pt-5">
-              <a href="#">Contact</a>
-            </div>
-          </div>
-        </div>
+        <!-- <div class="section">
+                <div class="container">
+                  <div class="row full-height justify-content-center pb-5 pt-5">
+                    <a href="#">Contact</a>
+                  </div>
+                </div>
+              </div> -->
       </div>
     </div>
 
     <!-- Page content -->
+
     <div class="main">
+      <div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+          <li class="list-group-item">A second item</li>
+          <li class="list-group-item">A third item</li>
+          <li class="list-group-item">A fourth item</li>
+          <li class="list-group-item">And a fifth one</li>
+        </ul>
+      </div>
+
+      <div>
+        <ul class="list-group list-group-horizontal">
+          <li class="list-group-item">An item</li>
+          <li class="list-group-item">A second item</li>
+          <li class="list-group-item">A third item</li>
+        </ul>
+      </div>
+
+      <!-- NAV HAMBURGER MENU + MODAL CALLER -->
       <nav class="navbar navbar-expand-lg bg-transparent">
         <div class="container-fluid">
           <a
