--- a/test.html
+++ b/test.html
@@ -42,297 +42,158 @@
   </head>
 
   <body>
-    <!-- NAVBAR -->
-    <!-- Side navigation -->
-    
-    <section class="container">
-      <div class="flex-container">
-        <div>
-          <a
-            href="https://www.linkedin.com/in/hebe-lia-romeu-0a5343234/"
-            alt="linkedin"
-            target="_blank"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-        </div>
-        <div>
-          <a
-            href="https://github.com/hebelia"
-            alt="github"
-            target="_blank"
-            ><i class="fa-brands fa-github-alt"></i
-          ></a>
-        </div>
-        <div>
-          <a
-            href="https://codepen.io/hebelia"
-            alt="codepen"
-            target="_blank"
-            ><i class="fa-brands fa-codepen"></i>
-          </a>
-        </div>
-      </div>
-  </section>
 
 
-
-
-
-
-
-
-
-
-    <div class="sidenav">
-      <div
-        class="row full-height justify-content-center pb-5 pt-5 mt-5 mb-5"
-      ></div>
-
-      <div class="row full-height justify-content-center pb-5 pt-5 mt-5 mb-5">
-        <div class="section">
-          <div class="container">
-            <div class="row full-height justify-content-center pb-5 pt-5">
-              <a
-                class="p-0"
-                style="
-                  color: #009188;
-                  text-decoration: none;
-                  text-align: center;
-                "
-                href="https://www.linkedin.com/in/hebe-lia-romeu-0a5343234/"
-                alt="linkedin"
-                target="_blank"
-                ><i class="fa-brands fa-linkedin"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <div class="section">
-          <div class="container">
-            <div class="row full-height justify-content-center pb-5 pt-5">
-              <a
-                class="p-0"
-                style="
-                  color: #009188;
-                  text-decoration: none;
-                  text-align: center;
-                "
-                href="https://github.com/hebelia"
-                target="_blank"
-                ><i class="fa-brands fa-github-alt"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <div class="section">
-          <div class="container">
-            <div class="row full-height justify-content-center pb-5 pt-5">
-              <a
-                class="p-0"
-                style="
-                  color: #009188;
-                  text-decoration: none;
-                  text-align: center;
-                "
-                href="https://codepen.io/hebelia"
-                target="_blank"
-                ><i class="fa-brands fa-codepen"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- <div class="section">
-                <div class="container">
-                  <div class="row full-height justify-content-center pb-5 pt-5">
-                    <a href="#">Contact</a>
-                  </div>
-                </div>
-              </div> -->
-      </div>
-    </div>
-
-    <!-- Page content -->
-
-    <div class="main">
-      <div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-          <li class="list-group-item">A fourth item</li>
-          <li class="list-group-item">And a fifth one</li>
-        </ul>
-      </div>
-
-      <div>
-        <ul class="list-group list-group-horizontal">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-        </ul>
-      </div>
-
-      <!-- NAV HAMBURGER MENU + MODAL CALLER -->
-      <nav class="navbar navbar-expand-lg bg-transparent">
-        <div class="container-fluid">
-          <a
-            ><img class="logo" src="assets/img/logo.png" alt="logoArgProg"
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <!-- i had to leave this here cause otherwise the login and logout button go to the left -->
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item"></li>
-            </ul>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-              <!-- Button trigger modal -->
-              <button
-                type="button"
-                class="btn btn-primary"
-                data-bs-toggle="modal"
-                data-bs-target="#modal-1"
-              >
-                Iniciar Sesión
-              </button>
-              <button class="btn btn-primary" type="button">
-                Cerrar Sesión
-              </button>
-            </div>
-          </div>
-        </div>
-      </nav>
+   
       <!-- -------------------------------->
 
-      <header>
-        <div class="logo">
-          <img src="assets/img/logo.png" alt="#" />
+      <!-- page navigation <3 -->
+      <section>
+        <div class="flex-container">
+          <div class="menu-item">
+            <a href="#home" class="menu__link">
+              <span class="menu-number"><strong>01.</strong></span
+              >&lt inicio &gt</a
+            >
+          </div>
+
+          <div class="menu-item">
+            <a href="#about" class="menu__link">
+              <span class="menu-number"><strong>02.</strong></span
+              >&lt acerca de mi &gt</a
+            >
+          </div>
+
+          <div class="menu-item">
+            <a href="#experience" class="menu__link">
+              <span class="menu-number"><strong>03.</strong></span
+              >&lt experiencia &gt</a
+            >
+          </div>
+
+          <div class="menu-item">
+            <a href="#education" class="menu__link">
+              <span class="menu-number"><strong>04.</strong></span
+              >&lt formación academica &gt</a
+            >
+          </div>
+
+          <div class="menu-item">
+            <a href="#skills" class="menu__link">
+              <span class="menu-number"><strong>05.</strong></span
+              >&lt habilidades &gt</a
+            >
+          </div>
+
+          <div class="menu-item">
+            <a href="#projects" class="menu__link">
+              <span class="menu-number"><strong>06.</strong></span
+              >&lt proyectos &gt</a
+            >
+          </div>
         </div>
-        <button class="nav-togle" aria-label="toggle navigation">
-          <span class="hamburgr"></span>
-        </button>
-        <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#home" class="nav__link">&lt INICIO &gt</a>
-            </li>
-            <li class="nav__item">
-              <a href="#about" class="nav__link">&lt ACERCA DE MI &gt</a>
-            </li>
-            <li class="nav__item">
-              <a href="#experience" class="nav__link">&lt EXPERIENCIA &gt</a>
-            </li>
-            <li class="nav__item">
-              <a href="#education" class="nav__link"
-                >&lt FORMACIÓN ACADEMICA &gt</a
-              >
-            </li>
-            <li class="nav__item">
-              <a href="#skills" class="nav__link">&lt HABILIDADES &gt</a>
-            </li>
-            <li class="nav__item">
-              <a href="#projects" class="nav__link">&lt PROYECTOS &gt</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
+      </section>
+
       <!-- curriculum -->
 
       <!-- introduction -->
       <section class="introduction" id="home">
-        <h1 class="section__title section__title--intro">
-          Hola, me llamo <strong>Hebe Lia</strong>
-        </h1>
-        <p class="section__subtitle section__subtitle--intro">
-          full stack developer junior
-        </p>
-        <img src="assets/img/pfp.jpg" alt="yo" />
-        <!-- ICON -->
-        <div clas="introduction__icon">
-          <i class="fa-solid fa-laptop-code"></i>
+        <!-- left side -->
+        <div class="left">
+          <h1 class="section__title section__title--intro">Hola, me llamo</h1>
+          <h1 class="section__title section__title--intro">
+            <strong>Hebe Lia Romeu</strong>
+          </h1>
+          <p class="section__subtitle section__subtitle--intro">
+            <i> full stack developer junior </i>
+          </p>
+        </div>
+        <!-- profile picture -->
+
+        <!-- right side -->
+        <div class="right">
+          <img src="assets/img/pfp.jpg" alt="yo" class="intro__img" />
+
+          <!-- ICON -->
+          <h1>
+            <i class="fa-solid fa-laptop-code icon-body introduction__icon"></i>
+          </h1>
         </div>
       </section>
 
       <!-- ABOUT -->
       <section class="about-me" id="about">
         <h2 class="section__title section__title--about">
-          &lt SOBRE MI &gt
-          <i class="fa-solid fa-circle-info"></i>
+          <strong> &lt sobre mi &gt </strong>
         </h2>
-        <p class="section__subtitle section__subtitle--about">
-          descripcion de mi
-        </p>
+        <p class="section__subtitle section__subtitle--about"></p>
         <div class="about-me__body">
           <!-- componente de about-me -->
-          <p>mas sobre mi?</p>
+          <h3><p>Aaaaaaaa ...................................</p></h3>
+        </div>
+        <div class="about-me__footer">
+          <h2>&lt / <i class="fa-solid fa-circle-info icon-body"></i> &gt</h2>
         </div>
       </section>
 
+
+
       <!-- EXPERIENCE -->
       <section class="my-experience" id="experience">
-        <h2 class="section_title section__title--experience">
-          &lt MI EXPERIENCIA &gt <i class="fa-solid fa-briefcase"></i>
+
+        <h2 class="section__title section__title--experience">
+          <strong> &lt experiencia &gt </strong>
         </h2>
         <div class="experience">
           <div class="job">
-            <i class="fa-regular fa-clipboard"></i>
             <h3>
-              Trabajo 1 (titulo del trabajo)
-
-              <p>descripcion trabajo 1</p>
-              <p class="project__date">fecha trabajo 1</p>
+             <span><i class="fa-solid fa-at icon-body"></i></span> Trabajo 1
             </h3>
+          
+              <p>descripcion trabajo 1</p>
+              <p class="project__date">fecha trabajo 1 </p>
           </div>
+
           <!-- trabajo 1-->
 
           <div class="job">
-            <i class="fa-regular fa-clipboard"></i>
             <h3>
-              Trabajo 2
-
+             <span><i class="fa-solid fa-at icon-body"></i></span> Trabajo 2
+            </h3>
               <p>descripcion trabajo 2</p>
               <p class="project__date">fecha trabajo 2</p>
-            </h3>
           </div>
           <!-- trabajo 2-->
 
           <div class="job">
-            <i class="fa-regular fa-clipboard"></i>
             <h3>
-              Trabajo 3
-
+             <span><i class="fa-solid fa-at icon-body"></i></span> Trabajo 3
+            </h3>
               <p>descripcion trabajo 3</p>
               <p class="project__date">fecha trabajo 3</p>
-            </h3>
           </div>
 
           <!-- trabajo 3-->
         </div>
+        <div class="my-experience__footer">
+          <h2>&lt / <i class="fa-solid fa-briefcase icon-body"></i> &gt</h2>
+        </div>
+
       </section>
 
       <!-- EDUCATION -->
 
       <section class="my-education" id="education">
-        <h2 class="section_title section__title--education">
-          &lt MI FORMACIÓN ACADEMICA &gt
-          <i class="fa-solid fa-user-graduate"></i>
+        <h2 class="section__title section__title--education">
+          <strong> &lt formación academica &gt </strong>
         </h2>
         <div class="education">
           <div class="course">
-            <i class="fa-regular fa-clipboard"></i>
-            <h3>
+            <i class="fa-solid fa-bookmark icon-body"></i>
+            <h3 class="titulo">
               NOMBRE de la carrira, titulo o certificacion
 
-              <p>nombre de la institucion</p>
+              <p class="institution">nombre de la institucion</p>
               <p class="project__date">fecha o duracion de la educacion</p>
               <!-- modal con seleccion de la fecha de inicio y finalizacion? -->
             </h3>
@@ -340,47 +201,55 @@
           <!-- titulo 1 -->
 
           <div class="course">
-            <i class="fa-regular fa-clipboard"></i>
-            <h3>
+            <i class="fa-solid fa-bookmark icon-body"></i>
+            <h3 class="titulo">
               NOMBRE de la carrira, titulo o certificacion
 
-              <p>nombre de la institucion</p>
+              <p class="institution">nombre de la institucion</p>
               <p class="project__date">fecha o duracion de la educacion</p>
               <!-- modal con seleccion de la fecha de inicio y finalizacion? -->
             </h3>
           </div>
           <!-- titulo 1 -->
           <div class="course">
-            <i class="fa-regular fa-clipboard"></i>
-            <h3>
+            <i class="fa-solid fa-bookmark icon-body"></i>
+            <h3 class="titulo">
               NOMBRE de la carrira, titulo o certificacion
 
-              <p>nombre de la institucion</p>
+              <p class="institution">nombre de la institucion</p>
               <p class="project__date">fecha o duracion de la educacion</p>
-              <!-- modal con seleccion de la fecha de inicio y finalizacion? -->
+
             </h3>
           </div>
           <!-- titulo 1 -->
+        </div>
+
+        <div class="my-education__footer">
+          <h2>&lt / <i class="fa-solid fa-user-graduate icon-body"></i> &gt</h2>
         </div>
       </section>
 
       <!-- SKILLS CIRCLES --COMPLETE!!!!!!! -->
       <section class="my-skills" id="skills">
         <h2 class="section__title section__title--skills">
-          &lt MIS HABILIDADES &gt <i class="fa-solid fa-shapes"></i>
+          <strong> &lt mis habilidades &gt </strong>
         </h2>
 
         <div class="skills"></div>
+
+        <div class="my-skills__footer">
+          <h2>&lt / <i class="fa-solid fa-shapes icon-body"></i> &gt</h2>
+        </div>
       </section>
 
       <!-- PROJECTS -->
       <section class="my-projects" id="projects">
-        <h2 class="section_title section__title--projects">
-          &lt MIS PROYECTOS &gt <i class="fa-solid fa-list-check"></i>
+        <h2 class="section__title section__title--projects">
+          <strong> &lt mis proyectos &gt </strong>
         </h2>
-        <div class="projects">
+        <div class="projects flex-container">
           <div class="project">
-            <i class="fa-regular fa-folder"></i>
+            <h2><i class="fa-regular fa-folder icon-body"></i></h2>
             <h3>
               Proyecto1
 
@@ -390,7 +259,7 @@
           </div>
           <!-- proyecto 1-->
           <div class="project">
-            <i class="fa-regular fa-folder"></i>
+            <h2><i class="fa-regular fa-folder icon-body"></i></h2>
             <h3>
               Proyecto2
               <p>descripcion proyecto 2</p>
@@ -399,7 +268,7 @@
           </div>
           <!-- proyecto 2-->
           <div class="project">
-            <i class="fa-regular fa-folder"></i>
+            <h2><i class="fa-regular fa-folder icon-body"></i></h2>
             <h3>
               Proyecto3
               <p>descripcion proyecto 3</p>
@@ -407,6 +276,10 @@
             </h3>
           </div>
           <!-- proyecto 3-->
+        </div>
+
+        <div class="my-projects__footer">
+          <h2>&lt / <i class="fa-solid fa-list-check icon-body"></i> &gt</h2>
         </div>
       </section>
 
